[package]
name = "talloc_cli"
version = "0.1.0"
authors = ["SpanishPear <shrey.somaiya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.4"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
tokio = { version = "1.10.1", features = ["full"] }
futures = "0.3.17"
